# anker

./: pyproject.toml  readme.org
src/: connect.py  image_downloader.py  main.py  vocabulary.py
src/anker/: card.py  connect.py  console.py  field_class.py  main.py  meta.py  test.py  vocabulary.py  webster.py
src/anker/card/: arithmetic.py  english_book.py  english_idioms.py  proxy_card.py  vocabulary.py
src/anker/creators/: context.py  google_translator.py  image_downloader.py  nltk_creator.py  webster.py
src/anker/fetcher/: csv.py  english_idioms.py  multiplication_x_y.py  stdin.py
src/anker/formatter/: __init__.py
