[tool.poetry]
name = "toank"
version = "0.1.0"
description = "Taking in a list of words from a book and create anki flashcards out of it"
authors = ["Gottschali <aligottschall22@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.1"
nltk = "^3.6.2"
googletrans = "==3.1.0a"
requests = "^2.25.1"
beautifulsoup4 = "^4.9.3"
tqdm = "^4.61.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
